# mantaray-py

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  documentation.yml  release.yml  tests.yml
docs/: Examples.md  authors.md  contributing.md  index.md  license.md  mantaray.md
docs/reference/: mantaray_py.md
src/mantaray_py/: __init__.py  __version__.py  _version.py  node.py  utils.py
src/mantaray_py/types/: __init__.py  get_random_values.py  types.py  utils.py
tests/: conftest.py  debug_notes.py  test_add.py  test_unit.py
tests/data/testpage/: index.html
tests/integration/: test_int.py
tests/unit/: test_unit.py
